IfcEngine.cs


		/// <summary>
		///		CreatePropertyW                             (http://rdf.bg/gkdoc/CS64/CreatePropertyW.html)
		///
		///	Returns a handle to an on the fly created property.
		///	If the model input is zero or not a model handle 0 will be returned,
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "CreatePropertyW")]
		public static extern Int64 CreatePropertyW(Int64 model, Int64 rdfPropertyType, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "CreatePropertyW")]
		public static extern Int64 CreatePropertyW(Int64 model, Int64 rdfPropertyType, byte[] name);

		/// <summary>
		///		GetPropertyByName                           (http://rdf.bg/gkdoc/CS64/GetPropertyByName.html)
		///
		///	Returns a handle to the objectTypeProperty or dataTypeProperty as stored inside.
		///	When the property does not exist yet and the name is unique
		///	the property will be created on-the-fly and the handle will be returned.
		///	When the name is not unique and given to a class or instance 0 will be returned.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetPropertyByName")]
		public static extern Int64 GetPropertyByName(Int64 model, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "GetPropertyByName")]
		public static extern Int64 GetPropertyByName(Int64 model, byte[] name);

		/// <summary>
		///		GetPropertyByNameW                          (http://rdf.bg/gkdoc/CS64/GetPropertyByNameW.html)
		///
		///	Returns a handle to the objectTypeProperty or dataTypeProperty as stored inside.
		///	When the property does not exist yet and the name is unique
		///	the property will be created on-the-fly and the handle will be returned.
		///	When the name is not unique and given to a class or instance 0 will be returned.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetPropertyByNameW")]
		public static extern Int64 GetPropertyByNameW(Int64 model, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "GetPropertyByNameW")]
		public static extern Int64 GetPropertyByNameW(Int64 model, byte[] name);

		/// <summary>
		///		GetPropertiesByIterator                     (http://rdf.bg/gkdoc/CS64/GetPropertiesByIterator.html)
		///
		///	Returns a handle to a property.
		///	If input property is zero, the handle will point to the first relevant property.
		///	If all properties are past (or no relevant properties are found), the function will return 0.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetPropertiesByIterator")]
		public static extern Int64 GetPropertiesByIterator(Int64 model, Int64 rdfProperty);

		/// <summary>
		///		SetPropertyRangeRestriction                 (http://rdf.bg/gkdoc/CS64/SetPropertyRangeRestriction.html)
		///
		///	Sets or unsets a specific owlClass as range restriction to an rdfProperty. The property is expected to
		///	be an objectp[roperty, i.e. relation.]
		///	If rdfProperty is not an object property this call has no effect.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetPropertyRangeRestriction")]
		public static extern void SetPropertyRangeRestriction(Int64 rdfProperty, Int64 owlClass, Int64 setting);

		/// <summary>
		///		SetPropertyRangeRestrictionEx               (http://rdf.bg/gkdoc/CS64/SetPropertyRangeRestrictionEx.html)
		///
		///	Sets or unsets a specific owlClass as range restriction to an rdfProperty. The property is expected to
		///	be an objectp[roperty, i.e. relation.]
		///	If rdfProperty is not an object property this call has no effect.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetPropertyRangeRestrictionEx")]
		public static extern void SetPropertyRangeRestrictionEx(Int64 model, Int64 rdfProperty, Int64 owlClass, Int64 setting);

		/// <summary>
		///		GetRangeRestrictionsByIterator              (http://rdf.bg/gkdoc/CS64/GetRangeRestrictionsByIterator.html)
		///
		///	Returns the next class the property is restricted to.
		///	If input class is zero, the handle will point to the first relevant class.
		///	If all classes are past (or no relevant classes are found), the function will return 0.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetRangeRestrictionsByIterator")]
		public static extern Int64 GetRangeRestrictionsByIterator(Int64 rdfProperty, Int64 owlClass);

		/// <summary>
		///		GetRangeRestrictionsByIteratorEx            (http://rdf.bg/gkdoc/CS64/GetRangeRestrictionsByIteratorEx.html)
		///
		///	Returns the next class the property is restricted to.
		///	If input class is zero, the handle will point to the first relevant class.
		///	If all classes are past (or no relevant classes are found), the function will return 0.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetRangeRestrictionsByIteratorEx")]
		public static extern Int64 GetRangeRestrictionsByIteratorEx(Int64 model, Int64 rdfProperty, Int64 owlClass);

		/// <summary>
		///		GetPropertyParentsByIterator                (http://rdf.bg/gkdoc/CS64/GetPropertyParentsByIterator.html)
		///
		///	Returns the next parent of the property.
		///	If input parent is zero, the handle will point to the first relevant parent.
		///	If all parent are past (or no relevant parent are found), the function will return 0.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetPropertyParentsByIterator")]
		public static extern Int64 GetPropertyParentsByIterator(Int64 rdfProperty, Int64 parentRdfProperty);

		/// <summary>
		///		SetNameOfProperty                           (http://rdf.bg/gkdoc/CS64/SetNameOfProperty.html)
		///
		///	Sets/updates the name of the property, if no error it returns 0.
		///	In case property does not exist it returns 1, when name cannot be updated 2.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfProperty")]
		public static extern Int64 SetNameOfProperty(Int64 rdfProperty, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfProperty")]
		public static extern Int64 SetNameOfProperty(Int64 rdfProperty, byte[] name);

		/// <summary>
		///		SetNameOfPropertyW                          (http://rdf.bg/gkdoc/CS64/SetNameOfPropertyW.html)
		///
		///	Sets/updates the name of the property, if no error it returns 0.
		///	In case property does not exist it returns 1, when name cannot be updated 2.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfPropertyW")]
		public static extern Int64 SetNameOfPropertyW(Int64 rdfProperty, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfPropertyW")]
		public static extern Int64 SetNameOfPropertyW(Int64 rdfProperty, byte[] name);

		/// <summary>
		///		SetNameOfPropertyEx                         (http://rdf.bg/gkdoc/CS64/SetNameOfPropertyEx.html)
		///
		///	Sets/updates the name of the property, if no error it returns 0.
		///	In case property does not exist it returns 1, when name cannot be updated 2.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfPropertyEx")]
		public static extern Int64 SetNameOfPropertyEx(Int64 model, Int64 rdfProperty, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfPropertyEx")]
		public static extern Int64 SetNameOfPropertyEx(Int64 model, Int64 rdfProperty, byte[] name);

		/// <summary>
		///		SetNameOfPropertyWEx                        (http://rdf.bg/gkdoc/CS64/SetNameOfPropertyWEx.html)
		///
		///	Sets/updates the name of the property, if no error it returns 0.
		///	In case property does not exist it returns 1, when name cannot be updated 2.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfPropertyWEx")]
		public static extern Int64 SetNameOfPropertyWEx(Int64 model, Int64 rdfProperty, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfPropertyWEx")]
		public static extern Int64 SetNameOfPropertyWEx(Int64 model, Int64 rdfProperty, byte[] name);

		/// <summary>
		///		GetNameOfProperty                           (http://rdf.bg/gkdoc/CS64/GetNameOfProperty.html)
		///
		///	Returns the name of the property, if the property does not exist it returns nullptr.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetNameOfProperty")]
		public static extern void GetNameOfProperty(Int64 rdfProperty, out IntPtr name);

		/// <summary>
		///		GetNameOfPropertyW                          (http://rdf.bg/gkdoc/CS64/GetNameOfPropertyW.html)
		///
		///	Returns the name of the property, if the property does not exist it returns nullptr.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetNameOfPropertyW")]
		public static extern void GetNameOfPropertyW(Int64 rdfProperty, out IntPtr name);

		/// <summary>
		///		GetNameOfPropertyEx                         (http://rdf.bg/gkdoc/CS64/GetNameOfPropertyEx.html)
		///
		///	Returns the name of the property, if the property does not exist it returns nullptr.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetNameOfPropertyEx")]
		public static extern void GetNameOfPropertyEx(Int64 model, Int64 rdfProperty, out IntPtr name);

		/// <summary>
		///		GetNameOfPropertyWEx                        (http://rdf.bg/gkdoc/CS64/GetNameOfPropertyWEx.html)
		///
		///	Returns the name of the property, if the property does not exist it returns nullptr.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetNameOfPropertyWEx")]
		public static extern void GetNameOfPropertyWEx(Int64 model, Int64 rdfProperty, out IntPtr name);

		/// <summary>
		///		SetPropertyType                             (http://rdf.bg/gkdoc/CS64/SetPropertyType.html)
		///
		///	This function sets the type of the property. This is only allowed
		///	if the type of the property was not set before.
		///
		///	The following values are possible for propertyType:
		///			1	The property is an Object Property
		///			2	The property is an Datatype Property of type Boolean
		///			3	The property is an Datatype Property of type Char
		///			4	The property is an Datatype Property of type Integer
		///			5	The property is an Datatype Property of type Double
		///	The return value of this call is GetPropertyType/Ex applied after applying
		///	the type, normally this corresponds with the propertyType requested
		///	to be set unless the property already has a different propertyType set before.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetPropertyType")]
		public static extern Int64 SetPropertyType(Int64 rdfProperty, Int64 propertyType);

		/// <summary>
		///		SetPropertyTypeEx                           (http://rdf.bg/gkdoc/CS64/SetPropertyTypeEx.html)
		///
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetPropertyTypeEx")]
		public static extern Int64 SetPropertyTypeEx(Int64 model, Int64 rdfProperty, Int64 propertyType);

		/// <summary>
		///		GetPropertyType                             (http://rdf.bg/gkdoc/CS64/GetPropertyType.html)
		///
		///	This function returns the type of the property.
		///	The following return values are possible:
		///		0	The property is not defined yet
		///		1	The property is an Object Type Property
		///		2	The property is an Data Type Property of type Boolean
		///		3	The property is an Data Type Property of type Char
		///		4	The property is an Data Type Property of type Integer
		///		5	The property is an Data Type Property of type Double
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetPropertyType")]
		public static extern Int64 GetPropertyType(Int64 rdfProperty);
